# ProbeNetworkTools

./: .dockerignore  .env.template  .gitignore  .replit  .server.js.swp  AUTH_BYPASS_README.md  AWS-AUTH-FIX.md  DEPLOYMENT.md  DEPLOYMENT_EC2.md  DEPLOYMENT_GUIDELINES.md  DEPLOYMENT_INSTRUCTIONS.md  FRESH_DEPLOYMENT_GUIDE.md  FRONTEND-DEPLOYMENT.md  FRONTEND_BUILD_FIX.md  PHASE1_DEPLOYMENT_GUIDE.md  PROBE_NODE_DEPLOYMENT_STEPS.md  PROBE_NODE_DOCUMENTATION.md  PROJECT_STATUS.md  README-AWS-DEPLOYMENT.md  README-DIAGNOSTICS.md  README.md  SSL-DEPLOYMENT.md  activate_auth_bypass.sh  add-admin-link.js  admin-fix.js  admin-user-fix.js  api-fix.js  auth-diagnostic-tool.js  auth-diagnostic.js  auth-diagnostics.js  auth-fix-backend.js  auth-fix-script.js  auth-fix.js  auth-issue-fix.js  auth-middleware-fix.js  auth-solution.js  auth-test.js  auth-token-checker.js  auth_bypass.py  auth_rebuild_plan.md  (+88 more)
attached_assets/: PROBEOPS_ZTNA_PROPOSAL.md  PROJECT.md  Pasted--COMMAND-OUTPUT-END-2025-05-17-18-39-36-129-Duration-238515923s-COMMAND-SUCCESS-2025-05-17-1-1747507456225.txt  Pasted--Container-probenetworktools-backend-1-Started-Container-probenetworktools-probe-1-Starting-Co-1747129391362.txt  Pasted--Container-probenetworktools-nginx-1-Starting-Container-probenetworktools-probe-1-Started-Cont-1747129583985.txt  Pasted--Failed-to-copy-frontend-assets-Deployment-may-fail-ubuntu-ip-172-16-0-80-ProbeNetworkTools-l-1747142198607.txt  Pasted--File-usr-local-lib-python3-11-site-packages-sqlalchemy-engine-base-py-line-3298-in-raw-connect-1747310796185.txt  (+45 more)
backend/: .env.backend  (+13 more)
(+252 files in other folders)
