[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "dnspython>=2.7.0",
    "fastapi>=0.115.12",
    "passlib>=1.7.4",
    "ping3>=4.0.8",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
    "email-validator>=2.2.0",
    "requests>=2.32.3",
    "bcrypt>=4.3.0",
    "websockets>=15.0.1",
]
